# data-engineering-bootcamp

00-bootcamp-project/: deb2-loading-data-to-gcs-then-bigquery-deb2-395909-5c0b85866983.json  load_data_to_gcs_then_bigquery.py  main-api.py  main-postgress.py
00-bootcamp-project/dags/: greenery_addresses_data_pipeline.py  greenery_events_data_pipeline.py  greenery_order_items_data_pipeline.py  greenery_products_data_pipeline.py  greenery_promos_data_pipeline.py
00-bootcamp-project/loading-data-to-bigquery-from-local/: load_table_from_csv.py
01-introduction-to-data-engineering/workshops/data-engineering-lifecycle/: extract.py  load.sh
02-data-warehouse-and-google-bigquery/examples/loading-data-to-bigquery-from-local/: deb2-deb2-loadingdata-to-bigquery-395909-71ba5f4967f9.json  load_table_from_csv.py
03-data-lake-with-google-cloud-storage/examples/uploading-to-gcs/: deb2-deb2-loading-file-to-gcs-deb2-395909-f7c5acac4d2d.json  main.py  main_one2card.py  pyproject.toml
04-data-pipelines-with-apache-airflow/dags/: my_first_dag.py  my_sc_dag.py  play_with_airflow_connections_and_hooks.py  play_with_airflow_connections_and_hooks_events.py  play_with_templating.py
playground/: main.py  pyproject.toml
