[tool.poetry]
name = "uploading-to-gcs"
version = "0.1.0"
description = ""
authors = ["zkan <zkan.cs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
google-cloud-storage = "^2.8.0"
Scrapy = "^2.8.0"
pandas = "^1.5.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
